--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="styels/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3> My first website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
+    </div>
 </body>
 </html>
