added the second and the third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h3> My first website</h3>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
     </div>
+    <div>
+        <h3> My second website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
+    </div>
+    <div>
+        <h3> My third website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
+    </div>
+    <div>
+        <h3> My fourth website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
+    </div>
 </body>
 </html>
