added a list to push code

--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
         <h3> My fourth website</h3>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam adipisci est porro excepturi neque tempore hic sit. Debitis provident delectus quaerat magnam esse modi repellendus architecto nesciunt tempore! Totam!</p>
     </div>
+    <div>
+        <h3> how to push incremental code</h3>
+        <ul>
+            <li> git add .</li>
+            <li> git commit -m"add a meaningful commit message </li>
+            <li> git push</li>
+
+
+        </ul>
+    </div>
 </body>
 </html>
