kim whit one dim

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
 
         </ul>
     </div>
+
+    <div>
+        <h3> kim kim khai every singal dim</h3>
+        <img src="images/microsoft-365-7mBictB_urk-unsplash.jpg"
+
+    </div>
 </body>
 </html>
